--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,9 @@ celery[redis]
 django-celery-beat
 django-celery-results
 psycopg2-binary
+django-environ
+djangorestframework
+django-storages
+django-cors-headers
+drf_yasg
+django-debug-toolbar
